@@ -128,4 +128,15 @@ static inline void _zbar_image_swap_symbols (zbar_image_t *a,
     b->syms = tmp;
 }
 
+static inline void _zbar_image_copy_size (zbar_image_t *dst,
+                                          const zbar_image_t *src)
+{
+    dst->width = src->width;
+    dst->height = src->height;
+    dst->crop_x = src->crop_x;
+    dst->crop_y = src->crop_y;
+    dst->crop_w = src->crop_w;
+    dst->crop_h = src->crop_h;
+}
+
 #endif
